<resources>
    <string name="app_name">19496411_DoHuyHoang_BaiKTThucHanh</string>
    <string name="email_id">Email ID</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="password">Password</string>
    <string name="new_to_acccount">New to acccount?</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="your_name">Your name</string>
</resources>