<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/image_2" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        android:textColor="#172B4D"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="45dp"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/your_name"
            android:fontFamily="@font/roboto_regular"
            android:drawableStart="@drawable/name"
            android:drawablePadding="20dp"
            android:textColorHint="#888888"
            android:backgroundTint="#A7A7A7"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email_id"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:drawableStart="@drawable/at_sign"
            android:drawablePadding="20dp"
            android:textColorHint="#888888"
            android:backgroundTint="#A7A7A7"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="20dp"
            android:textSize="16sp"
            android:textColorHint="#888888"
            android:backgroundTint="#A7A7A7"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#428DFC"
            android:fontFamily="@font/roboto_medium"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            app:backgroundTint="#F1F5F6"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/sign_up_with_google"
            android:textColor="#434343"
            app:cornerRadius="8dp"
            app:icon="@drawable/google"
            app:iconTint="@null"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            android:textAllCaps="false"
            android:gravity="center" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#838383"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/have_an_account" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#428DFC"
                android:text="@string/login"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>